// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tags tag 1`] = `
Array [
  Object {
    "model": "tms_Label",
    "record": Object {
      "name": "support",
    },
  },
]
`;

exports[`tickets ticket 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2024-01-24T14:15:15.000Z,
      "creator": Object {
        "source": "Zendesk",
        "uid": "23111595978772",
      },
      "description": "Hi there, I’m sending an email because I’m having a problem setting up your new product",
      "name": "Sample ticket: Meet the ticket",
      "priority": "normal",
      "source": "Zendesk",
      "status": Object {
        "category": "InProgress",
        "detail": "open",
      },
      "statusChangedAt": undefined,
      "type": Object {
        "category": "SupportCase",
        "detail": "incident",
      },
      "uid": "1",
      "updatedAt": 2024-01-24T14:15:15.000Z,
      "url": "https://example.zendesk.com/api/v2/tickets/1.json",
    },
  },
]
`;

exports[`tickets ticket has follow ups 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2024-01-24T14:15:15.000Z,
      "creator": Object {
        "source": "Zendesk",
        "uid": "23111595978772",
      },
      "description": "Hi there, I’m sending an email because I’m having a problem setting up your new product",
      "name": "Sample ticket: Meet the ticket",
      "priority": "normal",
      "source": "Zendesk",
      "status": Object {
        "category": "InProgress",
        "detail": "open",
      },
      "statusChangedAt": undefined,
      "type": Object {
        "category": "SupportCase",
        "detail": "incident",
      },
      "uid": "1",
      "updatedAt": 2024-01-24T14:15:15.000Z,
      "url": "https://example.zendesk.com/api/v2/tickets/1.json",
    },
  },
  Object {
    "model": "tms_TaskDependency",
    "record": Object {
      "dependencyType": Object {
        "category": "CreatedBy",
      },
      "dependentTask": Object {
        "source": "Zendesk",
        "uid": "2",
      },
      "fulfillingTask": Object {
        "source": "Zendesk",
        "uid": "1",
      },
      "fulfillingType": Object {
        "category": "Created",
      },
    },
  },
]
`;

exports[`tickets ticket is solved 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2024-01-24T14:15:15.000Z,
      "creator": Object {
        "source": "Zendesk",
        "uid": "23111595978772",
      },
      "description": "Hi there, I’m sending an email because I’m having a problem setting up your new product",
      "name": "Sample ticket: Meet the ticket",
      "priority": "normal",
      "resolutionStatus": "solved",
      "resolvedAt": 2024-01-24T20:12:02.000Z,
      "source": "Zendesk",
      "status": Object {
        "category": "Done",
        "detail": "solved",
      },
      "statusChangedAt": undefined,
      "type": Object {
        "category": "SupportCase",
        "detail": "incident",
      },
      "uid": "1",
      "updatedAt": 2024-01-24T14:15:15.000Z,
      "url": "https://example.zendesk.com/api/v2/tickets/1.json",
    },
  },
]
`;

exports[`tickets ticket with assignee 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2024-01-24T14:15:15.000Z,
      "creator": Object {
        "source": "Zendesk",
        "uid": "23111595978772",
      },
      "description": "Hi there, I’m sending an email because I’m having a problem setting up your new product",
      "name": "Sample ticket: Meet the ticket",
      "priority": "normal",
      "source": "Zendesk",
      "status": Object {
        "category": "InProgress",
        "detail": "open",
      },
      "statusChangedAt": undefined,
      "type": Object {
        "category": "SupportCase",
        "detail": "incident",
      },
      "uid": "1",
      "updatedAt": 2024-01-24T14:15:15.000Z,
      "url": "https://example.zendesk.com/api/v2/tickets/1.json",
    },
  },
  Object {
    "model": "tms_TaskAssignment",
    "record": Object {
      "assignedAt": 2024-01-24T14:17:58.000Z,
      "assignee": Object {
        "source": "Zendesk",
        "uid": "23123038291476",
      },
      "task": Object {
        "source": "Zendesk",
        "uid": "1",
      },
    },
  },
]
`;

exports[`tickets ticket with custom status 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2024-01-24T14:15:15.000Z,
      "creator": Object {
        "source": "Zendesk",
        "uid": "23111595978772",
      },
      "description": "Hi there, I’m sending an email because I’m having a problem setting up your new product",
      "name": "Sample ticket: Meet the ticket",
      "priority": "normal",
      "source": "Zendesk",
      "status": Object {
        "category": "InProgress",
        "detail": "Waiting for fix",
      },
      "statusChangedAt": undefined,
      "type": Object {
        "category": "SupportCase",
        "detail": "incident",
      },
      "uid": "1",
      "updatedAt": 2024-01-24T14:15:15.000Z,
      "url": "https://example.zendesk.com/api/v2/tickets/1.json",
    },
  },
]
`;

exports[`tickets ticket with tags 1`] = `
Array [
  Object {
    "model": "tms_Task",
    "record": Object {
      "additionalFields": Array [],
      "createdAt": 2024-01-24T14:15:15.000Z,
      "creator": Object {
        "source": "Zendesk",
        "uid": "23111595978772",
      },
      "description": "Hi there, I’m sending an email because I’m having a problem setting up your new product",
      "name": "Sample ticket: Meet the ticket",
      "priority": "normal",
      "source": "Zendesk",
      "status": Object {
        "category": "InProgress",
        "detail": "open",
      },
      "statusChangedAt": undefined,
      "type": Object {
        "category": "SupportCase",
        "detail": "incident",
      },
      "uid": "1",
      "updatedAt": 2024-01-24T14:15:15.000Z,
      "url": "https://example.zendesk.com/api/v2/tickets/1.json",
    },
  },
  Object {
    "model": "tms_TaskTag",
    "record": Object {
      "label": Object {
        "name": "tag1",
      },
      "task": Object {
        "source": "Zendesk",
        "uid": "1",
      },
    },
  },
  Object {
    "model": "tms_TaskTag",
    "record": Object {
      "label": Object {
        "name": "tag2",
      },
      "task": Object {
        "source": "Zendesk",
        "uid": "1",
      },
    },
  },
]
`;

exports[`users suspended user 1`] = `
Array [
  Object {
    "model": "tms_User",
    "record": Object {
      "emailAddress": "customer@example.com",
      "inactive": true,
      "name": "The Customer",
      "source": "Zendesk",
      "uid": "111",
    },
  },
]
`;

exports[`users user 1`] = `
Array [
  Object {
    "model": "tms_User",
    "record": Object {
      "emailAddress": "customer@example.com",
      "inactive": false,
      "name": "The Customer",
      "source": "Zendesk",
      "uid": "111",
    },
  },
]
`;
